--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "link-preview-js": "^3.1.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
