--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.18",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "axios": "^1.7.7",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
+    "latest": "^0.2.0",
     "link-preview-js": "^3.1.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
